--- a/index.css
+++ b/index.css
@@ -1,3 +1,39 @@
+body {
+  background-color: #44c7f5;
+  overflow: hidden;
+  margin: 0;
+}
+.rainbow {
+  position: absolute;
+  width: 100vw;
+  height: 100vw;
+  overflow: hidden;
+  background: transparent;
+  top: 15vh;
+  left: 35vw;
+}
+.rainbow:after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 15vw;
+  left: 15vw;
+  border-radius: 50%;
+  box-shadow:
+    0 0 0  3vh #0072bb,
+    0 0 0  6vh #0cd14b,
+    0 0 0  9vh #fff100,
+    0 0 0 12vh #f6931e,
+    0 0 0 15vh #ed1b24;
+}
+.cloud {
+  background-image: url('./vendor/cloud.png');
+  width: 206px;
+  height: 132px;
+  position: absolute;
+  background-repeat: no-repeat;
+}
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -16,6 +52,8 @@
   border-top-left-radius: 60%;
   border-top-right-radius: 60%;
   position: relative;
+  margin-top: 3.2rem;
+  margin-bottom: 3.2rem;
 }
 .egg-hole .crack {
   background-color: #f4629d;
